re PR fortran/58998 (Generic interface problem with gfortran)

2013-12-30  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/58998
	* resolve.c (resolve_symbol): Check that symbol is not only flavorless
	but also untyped.

2013-12-30  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/58998
	* gfortran.dg/generic_28.f90: New.

From-SVN: r206249